# phylia

./: README.md  _requirements.txt  _setup.py  pyproject.toml  requirements.txt  test_projectstable.py
phylia/: __init__.py
phylia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
phylia/_core/: __init__.py
phylia/data/: __init__.py  _sbb.py  _sbb_revision_2019.py  _synbiosys.py  _syntaxa.py  _syntaxontranslator.py  _taxa.py  _turboveg.py  _turboveg2.py  _vegmaps.py  cmsi.py  sbb.py  synbiosys.py  synbiosys_sbbweb.py  turboveg2.py  vegmaps.py
phylia/data/_data_cmsi/: CMSiPreferredTaxonRegister.csv  (+4 more)
phylia/io/: __init__.py  _mapdata.py  _mapelements.py  _maptables.py  _shapefile.py  _tv2db.py  _tvxml.py
phylia/plots/: __init__.py
phylia/read/: __init__.py  _mdb.py  _shapefile.py
phylia/sampling/: __init__.py
phylia/sbb/: __init__.py  _cmsi_vegtypes.py  _mapdata.py  _mapelements.py  _maptables.py
phylia/tools/: __init__.py  _projectstable.py  _syntaxontools.py  conversions.py  filetools.py  sbbprojects.py  syntaxontools.py
tests/: readme.rst  test_data.py  test_data_cmsi.py  test_data_sbb.py  test_data_sbbweb.py  test_data_synbiosys.py  test_data_syntra.py  test_data_tv2.py  test_data_vegmap.py  test_mapelements.py  test_maptables.py  test_packagedata.py  test_read_mdb.py  test_read_shape.py  test_read_tv2.py  test_releve.py  test_sbb_cmsi_vegtypes.py  test_sbb_mapdata.py  test_sbb_mapelements.py  test_sbb_maptables.py  test_stats_samplepolygonmap.py  test_tools_conversions.py  test_tools_sbbprojects.py  test_tools_syntaxontools.py  test_tvxml.py
(+109 files in other folders)
