[build-system]
requires = [
    "wheel",
    "setuptools-scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "phylia"
version = "0.0.4"
authors = [{ name="Thomas de Meij", email="mailphylia@gmail.com" },]
description = "phylia is a python package for phytosociological information analysis."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: Microsoft :: Windows :: Windows 11",
	]
dependencies = [
	"geopandas", "fiona", "numpy", "pandas", "matplotlib", "pyodbc", 
	"lxml", "plotly", 
	]

[project.urls]
Homepage = "https://github.com/phylia-project/phylia.git"
Issues = "https://github.com/phylia-project/phylia/issues"
